# CuraNova

./: .env.example  client_setup.sh  collab_setup.sh  main.py  pyproject.toml  server.py  server.sh  server_setup.sh  test_conn.py
agent_mcp/: pyproject.toml  test.py
agent_server/: pyproject.toml
agent_server/bidi-demo/app/: .env.example  example.py  main.py
agent_server/bidi-demo/app/d:/curanova/uploaded_images/: demo-session-ejk79.json
agent_server/bidi-demo/app/google_search_agent/: agent.py
agent_server/bidi-demo/app/google_search_agent/a2a_agent/: .env.example  agent.py
agent_server/bidi-demo/app/static/css/: style.css
agent_server/bidi-demo/app/static/js/: app.js  pcm-recorder-processor.js
curanova-client/: .env.example  next.config.ts  package.json  tailwind.config.mjs
curanova-client/public/audio/: pcm-player-processor.js  pcm-recorder-processor.js
curanova-client/src/app/: globals.css  page.tsx
curanova-client/src/app/chat/: page.tsx
curanova-client/src/components/: Features.tsx  Footer.tsx  Hero.tsx  Marquee.tsx  Navbar.tsx  Pricing.tsx  Testimonials.tsx
curanova-client/src/components/chat/: CameraModal.tsx  ChatPage.tsx
curanova-client/src/hooks/: useAudio.ts  useWebSocket.ts
curanova-client/src/lib/: chat-utils.ts
curanova-client/src/types/: chat.ts
golang_mcp_server/: go.mod  main.go  prompts.go  resources.go  tools.go
static/: index.html  script.js  style.css
